--- a/page3.html
+++ b/page3.html
@@ -43,6 +43,10 @@
       <div>
         <input type="submit" value="შენახვა" />
       </div>
+      <div>
+        დატოვეთ კომენტარი
+        <textarea></textarea>
+      </div>
     </form>
   </body>
 </html>
