--- a/page3.html
+++ b/page3.html
@@ -41,11 +41,11 @@
         <input type="file" />
       </div>
       <div>
-        <input type="submit" value="შენახვა" />
-      </div>
-      <div>
         დატოვეთ კომენტარი
         <textarea></textarea>
+      </div>
+      <div class="container">
+        <input type="submit" value="შენახვა" class="submit" />
       </div>
     </form>
   </body>
