--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <label>password</label>
         <input type="password" placeholder="შეიყვანეთ პაროლი" required />
       </div>
-      <div>
-        <input type="submit" value="შენახვა" />
+      <div class="container">
+        <input type="submit" value="შენახვა" class="submit" />
       </div>
     </form>
   </body>
