--- a/page2.html
+++ b/page2.html
@@ -41,8 +41,8 @@
           <input type="checkbox" />
           დასაქმებული
         </div>
-        <div>
-          <input type="submit" value="შენახვა" />
+        <div class="container">
+          <input type="submit" value="შენახვა" class="submit" />
         </div>
       </form>
     </div>
