--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <div>
+    <!-- <div>აქ ვქმნი ჰედერს ლისტის სახით, რომელსაც ერთ გაყოლებაზე დავალაგებ -->
       <ul>
         <li><a href="index.html">რეგისტრაციის ფორმა</a></li>
         <li><a href="page2.html">პირადი ინფორმაცია</a></li>
         <li><a href="page3.html">კონტაქტი</a></li>
       </ul>
     </div>
-    <form>
+    <!-- აქ ვქმნი მეილის და პაროლის ინფუთს -->
+    <form> 
       <div>
         <label>email</label>
         <input type="email" placeholder="შეიყვანეთ მეილი" required />
@@ -24,6 +25,7 @@
         <label>password</label>
         <input type="password" placeholder="შეიყვანეთ პაროლი" required />
       </div>
+      <!-- აქ ვქმნი საბმითის ღილაკს -->
       <div class="container">
         <input type="submit" value="შენახვა" class="submit" />
       </div>
